--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8087:8080"
 
     volumes:
-      - ./prefixes.txt:/prefixes.txt
+      - ./prefixes.txt:/app/prefixes.txt
+
     restart: "always"
 
